<resources>
    <string name="app_name">2 Fast Thumbs</string>
    <string name="enter_the_following_text">Select your testing time using the slider below.</string>
    <string name="text_to_be_typed_goes_here">Select your writing prompt below.</string>
    <string name="send">Send</string>
    <string name="wpm">WPM:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="start">Start</string>
    <string name="start_over">Start Over</string>
    <string name="time_up">Time\'s up!</string>
    <string name="test_end">The test is over.\nView your results below!\nPress the button below to retry!</string>
    <string name="please_type_the_prompt_given">Please type the prompt given.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="two_fast_fingers">2 Fast Thumbs</string>
    <string name="back4app_server_url">https://parseapi.back4app.com</string>
    <string name="back4app_app_id">DrOGegSCfBDgZZYrFJlxw5uf1sPut6VQjJrOMAAX</string>
    <string name="back4app_client_key">gxvJSq2rTVGSOC83TvKXYS8FkRDHbFRrna3Zi5ah</string>
    <string name="sign_out">Sign Out</string>
    <string name="setTime">Please select a testing duration first.</string>
    <string name="please_choose_a_text_prompt">Please choose a text prompt.</string>
    <string name="total_characters">Total characters:</string>
</resources>