<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <Button
        android:id="@+id/btnLeaderboard"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="131dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="leaderboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="166dp"
        android:scaleX="2.5"
        android:scaleY="2.5"
        android:text="@string/time_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/test_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/start"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="131dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/start_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions" />

    <TextView
        android:id="@+id/WPM"
        android:layout_width="151dp"
        android:layout_height="21dp"
        android:layout_marginTop="44dp"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:text="@string/wpm"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions" />

    <TextView
        android:id="@+id/accuracy"
        android:layout_width="151dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:text="@string/accuracy"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WPM" />

    <TextView
        android:id="@+id/characters"
        android:layout_width="151dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:text="@string/total_characters"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accuracy" />

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="#ff6666"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>